[*] Fix logo size on mobile

--- a/css/header.css
+++ b/css/header.css
@@ -178,6 +178,7 @@ center{
     }
 
     .logo img {
+        width: 100%;
         height: 57px;
     }
     
